--- a/CountyVotingDecision/EDA_County_Decision_Notebook.Rmd
+++ b/CountyVotingDecision/EDA_County_Decision_Notebook.Rmd
@@ -2,12 +2,9 @@
 title: "Exploratory Analysis: Presidential Voting by County"
 output: html_notebook
 ---
-# ----LOADING LIBRARIES  ----
+# LOADING LIBRARIES
 
-# we probably don't need the whole tidyerse but 
-# it's a bit easier
-
-
+```{r}
 library(shiny)
 library(tidyverse)
 library(RCurl)
@@ -15,57 +12,82 @@ library(rpart)
 library(maps)
 library(mapproj)
 library(rpart.plot)
+```
 
-# ----LOADING DATA ----
+# LOADING DATA
 
-# get 2010 US census data (data on county-level racial composition)
+Get 2010 US census data (data on county-level racial composition):
 
+```{r load_census}
 census_df <- readRDS("data/census.rds")
 census_df <- as_tibble(census_df)
 census_df <- census_df %>%
     rename(total_pop = total.pop)
+```
 
-# get population density data 
+Get population density data (calculated by a Github user using census and wikipedia):
+
+```{r load_density}
 
 density_url <- getURL("https://raw.githubusercontent.com/ykzeng/covid-19/master/data/census-population-landarea.csv")
 density_df <- read_csv(density_url)
 
-# get USDA county-level education statistics
+```
+
+Get USDA county-level education statistics (from the USDA)
+
+```{r load_educ}
 
 educ_url <- getURL("https://www.ers.usda.gov/webdocs/DataFiles/48747/Education.csv")
 educ_df <- read_csv(educ_url)
 
-# get poverty stats
+```
+
+Get poverty stats (from the USDA): 
+
+```{r load_pov}
 
 pov_url <- getURL("https://www.ers.usda.gov/webdocs/DataFiles/48747/PovertyEstimates.csv")
 pov_df <- read_csv(pov_url)
 
-# get unemployment stats 
+```
+
+Get unemployment stats (from the USDA):
+
+```{r load_unemp}
 
 emp_url <-  getURL("https://www.ers.usda.gov/webdocs/DataFiles/48747/Unemployment.csv")
 emp_df <- read_csv(emp_url)
 
-# get pop stats 
+```
+
+Get pop stats (also, from the USDA): 
+
+```{r load_pop}
 
 pop_url <- getURL("https://www.ers.usda.gov/webdocs/DataFiles/48747/PopulationEstimates.csv")
 pop_df <- read_csv(pop_url)
 
-# the last data set we want is a .csv containing countywide election data
-# we got this for a previous project and the code to generate it is 
-# contained in the script munging.py
+```
+
+The last data set we want is a .csv containing countywide election data
+we got this for a previous project and the code to generate it is 
+contained in the script munging.py.
+
+```{r load_pres}
 
 vote_df <- read_csv('data/pres_race_2020.csv')
 
+```
 
+# WRANGLING DATA
 
+There are a few changes we have to make to the data sets before we can join them.
 
-# ---- WRANGLING DATA ----
+First, we need to widen the emp_df and pov_df tables. We do this with tidyr's pivot_wider
+function.
 
-# There are a few changes we have to make to the data sets before we can join
-
-
-
-# 1) We need to widen the emp_df and pov_df tables
+```{r pivots}
 
 pov_df <- pov_df %>%
     pivot_wider(names_from = Attribute,
@@ -75,19 +97,15 @@ emp_df <- emp_df %>%
     pivot_wider(names_from = Attribute,
                 values_from = Value)
 
-# 2) The census_df is missing a FIPS column, and instead it has a name column
+```
 
-# we can repair this by joining it to another table that contains both name and FIPS
+The census_df is missing a FIPS column, and instead it has a name column we can repair this by joining it to another table that contains both name and FIPS
 
-# glimpsing the dataframes we've loaded so far, we see that the 
-# employment, population, and poverty dataframes have poorly formatted
-# FIPStxt columns (in fact they are recorded as double values when they 
-# should be character strings)
+Glimpsing the dataframes we've loaded so far, we see that the employment, population, and poverty dataframes have poorly formatted FIPStxt columns (in fact they are recorded as double values when they should be character strings)
 
-# as the FIPS is the joining key we need it to be in a standard format
+As the FIPS is the joining key we need it to be in a standard format. The following is used 
 
-# the following code can be used to fix the faulty FIPS entries
-
+```{r prepend_zero}
 prepend_zero <- function(number_value){
     char_value <- as.character(number_value)
     if(str_length(char_value) < 5){
@@ -95,15 +113,13 @@ prepend_zero <- function(number_value){
     }
     char_value
 }
-
 prepend_zero <- Vectorize(prepend_zero)
+```
 
 
-# Now we can actually go through and fix the FIPStxt columns in 
-# emp_df, pop_df, and pov_df.
+Now we can actually go through and fix the FIPStxt columns in emp_df, pop_df, and pov_df. While we do this we add in duplicates of the (valid) FIPS columns in the other two data sets
 
-# While we do this we add in duplicates of the (valid) FIPS columns
-# in the other two data sets
+```{r fips_mutates}
 
 density_df <- density_df %>%
     mutate(fips = prepend_zero(fips))
@@ -123,18 +139,25 @@ vote_df <- vote_df %>%
 educ_df <- educ_df %>%
     rename(fips = 'FIPS Code')
 
-# Add in dem_pct and gop_pct to the vote_df
+```
+
+Add in dem_pct and gop_pct to the vote_df
+
+```{r pol_pcts}
 
 vote_df <- vote_df %>%
-    mutate(dem_pct = 100*votes_dem/(votes_dem+votes_gop),
+    mutate(
+           dem_pct = 100*votes_dem/(votes_dem+votes_gop),
            gop_pct = 100*votes_gop/(votes_dem+votes_gop)
-    )
+          )
 
-# Add in categorical variable (did the county vote Dem/GOP in 2020 Pres)
-# to vote_df
+```
 
-# Probably unnecessarily we write a little function to make 
-# the call to mutate a bit simpler
+Add in categorical variable (did the county vote Dem/GOP in 2020 Pres) to vote_df
+
+Probably unnecessarily we write a little function to make the call to mutate a bit simpler.
+
+```{r majority_vote}
 
 majority_vote <- function(votes_dem, votes_gop){
     vote = 'D'
@@ -143,24 +166,28 @@ majority_vote <- function(votes_dem, votes_gop){
     }
     vote
 }
-
-# whenever you're using a function in mutate, don't forget to vectorize!
-
 majority_vote <- Vectorize(majority_vote)
 
-# now we create the majority vote categorical var
+```
+
+(Whenever you're using a function in mutate, don't forget to vectorize!)
+
+Now we create the majority vote categorical var
+
+```{r majority_vote_mutate}
 
 vote_df <- vote_df %>%
     mutate(majority = majority_vote(votes_dem, votes_gop))
     
 vote_df$majority <- as.factor(vote_df$majority)
 
+```
+
+We also include a state-level majority to decide how many states we classify incorrectly
 
 
-# we also include a state-level majority to decide how many states we 
-# classify incorrectly
 
-
+```{r state_majorities}
 
 state_df <- vote_df %>%
     group_by(t_state_name) %>%
@@ -169,24 +196,21 @@ state_df <- vote_df %>%
     mutate(state_majority = majority_vote(total_dem,
                                           total_gop))
 
-
-    # %>% group_by(t_state_name) 
-    # %>% summarise(total_dem = sum(votes_dem), total_gop = sum(votes_gop))
-    # %>% mutate(state_majority  = majority_vote(total_dem, total_gop))
-
 state_df$state_majority <- as.factor(state_df$state_majority)
 
 vote_df <- vote_df %>%
     inner_join(state_df, by = 't_state_name')
 
+```
 
-# ---- JOINING + SELECTING DATA ----
 
-# combine the dataframes together
+# JOINING + SELECTING DATA
 
-# the order matters, because the helper function we're using is designed
-# to be applied mainly to census_df, so we want to make sure the counties
-# come out in the order specified by census_df. 
+Combine the dataframes together
+
+The order matters, because the helper function we're using is designed to be applied mainly to census_df, so we want to make sure the counties come out in the order specified by census_df. 
+
+```{r main_join}
 
 df <- census_df %>%
     left_join(density_df, by = "fips") %>%
@@ -196,24 +220,30 @@ df <- census_df %>%
     left_join(pov_df, by = "fips") %>%
     left_join(vote_df, by = "fips")
 
+```
 
-# choose variables of interest. 
-# there are hundreds of variables in df currently, far more than we need
 
-# we'll just choose a few that, based on popular discourse, seem likely to
-# influence the election outcome of a county. 
+We need to choose variables of interest. There are hundreds of variables in df currently, far more than we need. We'll just choose a few that, based on popular discourse, seem likely to
+influence the election outcome of a county. 
 
-# From census_df we'll take total.pop as well as white, black, hispanic, asian
+* From census_df we'll take: 
 
-# From density_df we'll just take population density (ppl/sq mi.) which 
-# is labeled as POP060210
+  + total.pop
+  + white
+  + black
+  + hispanic
+  + asian
 
-# From educ_df we will take the variables (all self-explanatory): 
+* From density_df we'll just take:
 
-# Percent of adults with less than a high school diploma, 2015-19
-# Percent of adults with a high school diploma only, 2015-19
-# Percent of adults completing some college or associate's degree, 2015-19
-# Percent of adults with a bachelor's degree or higher, 2015-19
+ + Population density (ppl/sq mi.) which is labeled as POP060210
+
+* From educ_df we will take the (fairly self-explanatory) variables: 
+
+ + Percent of adults with less than a high school diploma, 2015-19
+ + Percent of adults with a high school diploma only, 2015-19
+ + Percent of adults completing some college or associate's degree, 2015-19
+ + Percent of adults with a bachelor's degree or higher, 2015-19
 
 # From emp_df we will take the variables 
 
